--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   http: ^1.3.0
   flutter_riverpod: ^2.0.0
   flutter_dotenv: ^5.0.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
