feat : バックエンド

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,13 +13,21 @@ services:
       - "5432:5432"
     volumes:
       - "pgdata:/var/lib/postgresql/data"
+    healthcheck:
+     test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+     interval: 5s
+     timeout: 5s
+     retries: 5
+     start_period: 10s
+
   
   backend:
     build: .
     container_name: fastapi_backend
     restart: always
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       DATABASE_URL: ${DATABASE_URL}
     ports:
